# p2mr-qrs

./: .gitignore  00_README.md  01_native_benchmark_harness.md  02_openssl_slh_dsa_backend.md  04_batch_schnorr_baseline.md  05_block_validation_model.md  06_report_generation.md  07_reviewer_validation.md  CMakeLists.txt  LICENSE  README.md  REVIEWER_DOSSIER.md  THIRD_PARTY_NOTICES.md
.github/ISSUE_TEMPLATE/: benchmark-reproduction.yml  review-bip360-dependency.yml  review-final-vectors.yml  review-qrs-sigmsg.yml  review-resource-accounting.yml  review-slh-dsa-verifier.yml
.github/workflows/: native-bench-smoke.yml  release-check.yml
codex-specs/: 00_README.md  01_bip_spec_hardening.md  02_consensus_test_vectors.md  03_native_benchmark_completion.md  04_experimental_batch_schnorr.md  05_core_validation_path.md  06_fuzz_and_negative_tests.md  07_reviewer_dossier.md  08_release_checklist.md
docs/: BATCH_SCHNORR_BASELINE_STATUS.md  BITCOIN_CORE_INTEGRATION_REQUIREMENTS.md  CONSENSUS_GAP_MANIFEST.md  EXPLICIT_QRS_BUDGET_FALLBACK.md  FINAL_TRANSACTION_VECTOR_SCHEMA.md  PUBLIC_REVIEW_POST_DRAFT.md  PUBLIC_REVIEW_READINESS.md  README.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  RESOURCE_ACCOUNTING_DECISION.md  REVIEWER_DOSSIER.md  REVIEW_THIS_FIRST.md  VECTOR_COVERAGE_MATRIX.md  bip-p2mr-quantum-rescue-leaf-consolidated.mediawiki  bip-p2mr-quantum-rescue-leaf-v0.9.0.mediawiki  bip-p2mr-slh-dsa-leaf-v0.9.0.mediawiki  consensus-gap-manifest.json  consensus-gap-manifest.schema.json  core-validation-model.md  native-benchmark-report-template.md
docs/evidence/: bitcoin-core-integration-requirements.md  consensus-gap-manifest.json  consensus-gap-manifest.md  consensus-gap-manifest.schema.json  resource-accounting-decision.md  slh-dsa-verify-cost-analysis.md
docs/internal/: move-map.md  (+1 more)
qrs-pre-review-hardening/: 00_README.md  01_bip_spec_hardening.md  02_consensus_test_vectors.md  03_native_benchmark_completion.md  04_experimental_batch_schnorr.md  05_core_validation_path.md  06_fuzz_and_negative_tests.md  07_reviewer_dossier.md  08_release_checklist.md
scripts/: assert_quick_report.py  check_batch_schnorr_baseline.py  check_bip341_sigmsg_order.py  check_doc_paths.py  check_qrs_digest_agreement.py  ci_structural_check.sh  compute_qrs_digest_model.py  evaluate_resource_accounting.py  full_release_check.sh  release_check.sh  run_qrs_negative_tests.py  validate_consensus_gap_manifest.py  validate_quick_report.sh  validate_test_vectors.py  validate_vector_coverage_matrix.py  verify_qrs_fixtures.py  verify_qrs_vectors.py
src/: bench_timer.cpp  block_model.cpp  core_validation_model.cpp  environment.cpp  experimental_batch_schnorr.c  main.cpp  qrs_digest_model.cpp  report_json.cpp  report_markdown.cpp  schnorr_secp256k1.cpp  slh_dsa_backend_null.cpp  slh_dsa_backend_openssl.cpp  slh_dsa_cli.cpp  slh_dsa_openssl.cpp  stats.cpp
test_vectors/: README.md  qrs_control_low_bit_unset.json  qrs_invalid_control_block_length.json  qrs_invalid_leaf_version.json  qrs_invalid_pubkey_length.json  qrs_invalid_signature_fixed_length.json  qrs_invalid_signature_length.json  qrs_malformed_witness_extra_after_annex.json  qrs_malformed_witness_extra_element.json  qrs_max_depth_path.json  qrs_merkle_root_mismatch.json  qrs_multi_input_explicit_spent_outputs.json  qrs_transaction_vector.schema.json  qrs_valid_no_annex.json  qrs_valid_with_annex.json  vector_coverage_matrix.json  vector_coverage_matrix.schema.json
tests/: qrs_negative_cases.json
(+39 files in other folders)
